--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,9 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  username: MyString
-  email: MyString
+admin:
+  username: admin
+  email: a.starwars.d@gmail.com
+  password_digest: <%= User.digest('admin') %>
 
-two:
-  username: MyString
-  email: MyString
