--- a/test/fixtures/dialogs.yml
+++ b/test/fixtures/dialogs.yml
@@ -1,7 +1,6 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
+  id: 1
+  name: Test
 
-two:
-  name: MyString
