--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -25,3 +25,11 @@ user_two:
   password_digest: <%= User.digest('password') %>
   activated: true
   activated_at: <%= Time.zone.now %>
+
+user_three:
+  id: 4
+  username: user_three
+  email: user_three@gmail.com
+  password_digest: <%= User.digest('password') %>
+  activated: true
+  activated_at: <%= Time.zone.now %>
